--- a/index.html
+++ b/index.html
@@ -286,14 +286,14 @@
         <a href="ebenmorata77@gmail.com">ebenmorata77@gmail.com</a>
         <!-- Social links -->
         <div class="social">
-          <a href="facebook.com/Eben Morata" target="_blank"
+          <a href="https://web.facebook.com/kwasi.darlingbuoy/" target="_blank"
             ><img src="./assets/facebook-icon.svg" alt="Facebook"
           /></a>
           
-          <a href="linkedIn.com/eben-morata" target="_blank"
+          <a href="https://www.linkedin.com/in/eben-morata-05161426a/" target="_blank"
             ><img src="./assets/linkedin-icon.svg" alt="Linkedin"
           /></a>
-          <a href="github.com/Eben-Morata" target="_blank"><img src="./assets/github-icon.svg" alt="GitHub" /></a>
+          <a href="https://github.com/Eben-Morata" target="_blank"><img src="./assets/github-icon.svg" alt="GitHub" /></a>
         </div>
     
         <p>Copyright &copy;<span id="datee"></span> Ebenezer Williams, All rights reserved</p>
