--- a/index.html
+++ b/index.html
@@ -122,6 +122,16 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, autem numquam hic nesciunt nostrum iure maiores modi. Veniam eum debitis animi alias a dolore laboriosam nobis, quisquam quod adipisci accusantium?"</p>        
           </div>                 
         </div>
+          <!-- About 4 -->
+        <div class="Acard"> 
+          <div class="about-info">
+            <img class="logos" src="./assets/4.png" alt="weblogo"/>
+            <h1>UI/UX Development</h1>
+          </div>   
+          <div class="about-text">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, autem numquam hic nesciunt nostrum iure maiores modi. Veniam eum debitis animi alias a dolore laboriosam nobis, quisquam quod adipisci accusantium?"</p>        
+          </div>                 
+        </div>
         </article>
       </section>
 
