--- a/index.html
+++ b/index.html
@@ -179,12 +179,12 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project Three</h3>
+              <h3>My Calculator App</h3>
               <p>HTML, CSS, JAVASCRIPT</p>
             </div>
 
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+              <a href="https://eben-morata.github.io/My-Calculator/" target="_blank"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -193,12 +193,12 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project Four</h3>
+              <h3>My Hotel</h3>
               <p>HTML, CSS, JAVASCRIPT</p>
             </div>
 
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+              <a href="https://eben-morata.github.io/Hotel-de_Eben/" target="_blank"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -207,12 +207,12 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project Five</h3>
-              <p>HTML, CSS, REACT JS</p>
+              <h3>My Currency App</h3>
+              <p>HTML, CSS & JS</p>
             </div>
 
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+              <a href="https://https://eben-morata.github.io/My-Currency-converter/" target="_blank"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -221,13 +221,13 @@
         <div href="" class="card">
           <div class="project-info">
             <div class="project-bio">
-              <h3>Project Six</h3>
+              <h3>My Country Guide</h3>
               <p>HTML, CSS, JAVASCRIPT</p>
             </div>
 
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="https://eben-morata.github.io/My-Country-Guide/" target="_blank"><i class="fab fa-github"></i></a>
+            
             </div>
           </div>
         </div>
@@ -296,7 +296,7 @@
         <a href="ebenmorata77@gmail.com">ebenmorata77@gmail.com</a>
         <!-- Social links -->
         <div class="social">
-          <a href="https://web.facebook.com/kwasi.darlingbuoy/" target="_blank"
+          <a href="https://web.facebook.com/" target="_blank"
             ><img src="./assets/facebook-icon.svg" alt="Facebook"
           /></a>
           
